--- a/.gitignore
+++ b/.gitignore
@@ -43,3 +43,10 @@ app.*.map.json
 /android/app/debug
 /android/app/profile
 /android/app/release
+
+# Environment and configuration files
+.env
+.env.local
+.env.production
+config/secrets.dart
+lib/config/secrets.dart
