native splash + launcher icon

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,7 @@ dev_dependencies:
   flutter_lints: ^5.0.0
   hive_generator: ^2.0.1
   build_runner: ^2.4.7
+  flutter_native_splash: ^2.4.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -105,3 +106,25 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/to/font-from-package
+
+# Flutter Native Splash configuration
+flutter_native_splash:
+  # Background color
+  color: "#FFFFFF"
+  
+  # Text configuration
+  color_dark: "#FFFFFF"
+  android_12:
+    color: "#FFFFFF"
+    color_dark: "#FFFFFF"
+    image: assets/icons/app_icon.png
+    image_dark: assets/icons/app_icon.png
+  
+  # Platform support
+  android: true
+  ios: true
+  web: false
+  
+  # Centered app icon
+  image: assets/icons/app_icon.png
+  image_dark: assets/icons/app_icon.png
